# kcm-grub2

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  ChangeLog  INSTALL  Messages.sh  README  config.h.cmake  format_sources  kcm_grub2.pot  release.sh
cfg/: CMakeLists.txt  kcm_grub2.kcfg  settings.kcfgc
cmake/modules/: GRUBPaths.cmake
other/: CMakeLists.txt  kcm_grub2.desktop
po/ar/: kcm-grub2.po
po/ast/: kcm-grub2.po
po/bs/: kcm-grub2.po
po/ca/: kcm-grub2.po
po/ca@valencia/: kcm-grub2.po
po/cs/: kcm-grub2.po
po/da/: kcm-grub2.po
po/de/: kcm-grub2.po
po/el/: kcm-grub2.po
po/en_GB/: kcm-grub2.po
po/eo/: kcm-grub2.po
po/es/: kcm-grub2.po
po/et/: kcm-grub2.po
po/eu/: kcm-grub2.po
po/fi/: kcm-grub2.po
po/fr/: kcm-grub2.po
po/ga/: kcm-grub2.po
po/gl/: kcm-grub2.po
po/he/: kcm-grub2.po
po/hu/: kcm-grub2.po
po/ia/: kcm-grub2.po
po/id/: kcm-grub2.po
po/is/: kcm-grub2.po
po/it/: kcm-grub2.po
po/ja/: kcm-grub2.po
po/ka/: kcm-grub2.po
po/ko/: kcm-grub2.po
po/lt/: kcm-grub2.po
po/mr/: kcm-grub2.po
po/nb/: kcm-grub2.po
po/nds/: kcm-grub2.po
po/nl/: kcm-grub2.po
po/nn/: kcm-grub2.po
po/pa/: kcm-grub2.po
po/pl/: kcm-grub2.po
po/pt/: kcm-grub2.po
po/pt_BR/: kcm-grub2.po
po/ro/: kcm-grub2.po
po/ru/: kcm-grub2.po
po/sk/: kcm-grub2.po
po/sl/: kcm-grub2.po
po/sv/: kcm-grub2.po
po/tr/: kcm-grub2.po
po/ug/: kcm-grub2.po
po/uk/: kcm-grub2.po
po/zh_CN/: kcm-grub2.po
po/zh_TW/: kcm-grub2.po
src/: CMakeLists.txt  common.cpp  common.h  convertDlg.cpp  convertDlg.h  entry.cpp  installDlg.cpp  installDlg.h  kcm_grub2.cpp  kcm_grub2.h  kcm_grub2.json  qPkBackend.cpp  qPkBackend.h  qapt2Backend.cpp  qaptBackend.cpp  qaptBackend.h  removeDlg.cpp  removeDlg.h  textinputdialog.cpp  textinputdialog.h
src/helper/: CMakeLists.txt  helper.cpp  helper.h  kcmgrub2.actions
ui/: choiceDlg.ui  convertDlg.ui  installDlg.ui  kcm_grub2.ui  removeDlg.ui
