project(kcm-grub2)
set(KCM_GRUB2_VERSION_MAJOR "0")
set(KCM_GRUB2_VERSION_MINOR "3")
set(KCM_GRUB2_VERSION_PATCH "6")
set(KCM_GRUB2_VERSION "${KCM_GRUB2_VERSION_MAJOR}.${KCM_GRUB2_VERSION_MINOR}.${KCM_GRUB2_VERSION_PATCH}")

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH})

find_package(Qt4 4.6.0 REQUIRED)
find_package(KDE4 4.4.0 REQUIRED)
include(KDE4Defaults)

option(WITH_ImageMagick "Search for ImageMagick package" ON)
if (WITH_ImageMagick)
    find_package(ImageMagick COMPONENTS Magick++)
endif (WITH_ImageMagick)
if (ImageMagick_Magick++_FOUND)
    set(HAVE_IMAGEMAGICK 1)
else (ImageMagick_Magick++_FOUND)
    set(HAVE_IMAGEMAGICK 0)
endif(ImageMagick_Magick++_FOUND)

option(WITH_HD "Search for HD package" ON)
if (WITH_HD)
    find_package(HD)
endif (WITH_HD)
if (HD_FOUND)
    set(HAVE_HD 1)
else (HD_FOUND)
    set(HAVE_HD 0)
endif(HD_FOUND)

option(WITH_QApt "Search for QApt package" ON)
if (WITH_QApt)
    find_package(QApt)
endif (WITH_QApt)
if (QAPT_FOUND)
    set(HAVE_QAPT 1)
else (QAPT_FOUND)
    set(HAVE_QAPT 0)
endif(QAPT_FOUND)

option(WITH_QPackageKit "Search for QPackageKit package" ON)
if (WITH_QPackageKit)
    find_package(QPackageKit)
endif (WITH_QPackageKit)
if (QPACKAGEKIT_FOUND)
    set(HAVE_QPACKAGEKIT 1)
else (QPACKAGEKIT_FOUND)
    set(HAVE_QPACKAGEKIT 0)
endif(QPACKAGEKIT_FOUND)

configure_file(config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/src/config.h)

add_subdirectory(cfg)
add_subdirectory(other)
add_subdirectory(src)
